Added Minecraft Java options
Added experiment java arguments